final work done

--- a/public/html/editor.html
+++ b/public/html/editor.html
@@ -494,6 +494,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.13/ace.js"
     integrity="sha512-OMjy8oWtPbx9rJmoprdaQdS2rRovgTetHjiBf7RL7LvRSouoMLks5aIcgqHb6vGEAduuPdBTDCoztxLR+nv45g=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="../js/editor.js" type="module"></script>
   <script src="../js/problem.js"></script>
   <script src="../js/verdict.js"></script>
