sign up button fixed

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="home-navbar-right">
-          <form action="/register" class="navbar-register">
+          <form action="/auth/google" class="navbar-register">
             <button class="waves-effect waves-light btn user-register-but">
               Sign Up
             </button>
